[tool.poetry]
name = "caseta-to-mqtt"
version = "0.1.0"
description = ""
authors = ["Daniel Kulla <dkulla129@gmail.com>"]
readme = "README.md"
packages = [{include = "caseta_to_mqtt"}]

[tool.poetry.dependencies]
python = "^3.11"
pylutron-caseta = {extras = ["cli"], version = "^0.18.1"}
aiomqtt = "^1.0.0"
dynaconf = "^3.1.12"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
